BLTI-8 add javadoc plugin, more cleanup.
git-svn-id: https://source.sakaiproject.org/svn/basiclti/ims/basiclti/trunk@70073 66ffb92e-73f9-0310-93c1-f5514f145a0a