@@ -88,24 +88,47 @@
             </snapshots>
         </repository>
     </repositories>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.sakaiproject.basiclti</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>basiclti-impl</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.sakaiproject.basiclti</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>basiclti-util</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.sakaiproject.basiclti</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>portlet-util</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <links>
+                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+                    </links>
+                    <breakiterator>true</breakiterator>
+                    <verbose>false</verbose>
+                    <aggregate>true</aggregate>
+                    <maxmemory>512m</maxmemory>
+                    <additionalJOption>-J-Xms168m -J-Xmx512m
+                        -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+                    <version>2.3</version>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
